--- a/css/cleoandeves.css
+++ b/css/cleoandeves.css
@@ -21,7 +21,7 @@ body {
 }
 
 .tagline {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Playfair Display', serif;
 }
 
 .galleryintro {
@@ -32,7 +32,7 @@ body {
 }
 
 .brand {
-    font-family: 'Montserrat', Arial, serif; 
+    font-family: 'Playfair Display', serif; 
     font-weight: 400;
     padding: 0;
     font-size: 32px;
