--- a/css/cleoandeves.css
+++ b/css/cleoandeves.css
@@ -230,7 +230,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/map.png) no-repeat center center scroll;
+    background: url(../images/map.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
