--- a/css/cleoandeves.css
+++ b/css/cleoandeves.css
@@ -190,7 +190,7 @@ hr.small {
     width: 100%;
     height: 100%;
     background: url(../images/3.png) no-repeat center center scroll;
-    background-position: 0 0;
+    background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
